# Auditore-Eloquence

./: .gitignore  .sesskey  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  session_transcript.txt
.github/workflows/: deploy.yml  mirror.yml
app/: main.py
app/api/: rest.py  websockets.py
app/core/: orchestrator.py  system_1_live.py  system_2_async.py  threshold_math.py  validators.py
app/templates/: debate_template.json  demo_video_template.json  interview_template.json  pitch_template.json  presentation_template.json  schema.json
static/css/: style.css
static/js/: audio_processor.js  media_stream.js
